# aws___aws-durable-execution-sdk-python

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml
.github/hooks/: pre-commit
.github/scripts/: check_dist_legal_files.py  ci-checks.sh  lintcommit.py  type-checks.sh
.github/scripts/tests/: test_lintcommit.py
.github/workflows/: ci.yml  cloud-tests.yml  deploy-examples.yml  integration-tests.yml  pypi-publish.yml  scorecard.yml  update-sam-template.yml
examples/: cli.py  examples-catalog.json  template.yaml
examples/scripts/: generate_sam_template.py
examples/src/block_example/: block_example.py
examples/src/callback/: callback_concurrency.py  callback_heartbeat.py  callback_simple.py
examples/src/comprehensive_operations/: comprehensive_operations.py
examples/src/handler_error/: handler_error.py
examples/src/map/: map_completion.py  map_with_batch_serdes.py
examples/src/no_replay_execution/: no_replay_execution.py
examples/src/parallel/: parallel_with_custom_serdes.py  parallel_with_max_concurrency.py
examples/src/run_in_child_context/: run_in_child_context.py  run_in_child_context_large_data.py  run_in_child_context_step_failure.py
examples/src/simple_execution/: simple_execution.py
examples/src/step/: step_no_name.py  step_with_exponential_backoff.py  steps_with_retry.py
examples/src/wait/: multiple_wait.py  wait.py
examples/src/wait_for_callback/: wait_for_callback_submitter_failure_catchable.py  wait_for_callback_timeout.py
examples/test/: __init__.py  conftest.py
examples/test/callback/: test_callback_concurrency.py  test_callback_heartbeat.py  test_callback_simple.py
examples/test/comprehensive_operations/: test_comprehensive_operations.py
examples/test/logger_example/: test_logger_example.py
examples/test/map/: test_map_with_batch_serdes.py  test_map_with_custom_serdes.py  test_map_with_failure_tolerance.py  test_map_with_large_scale.py  test_map_with_min_successful.py
examples/test/parallel/: test_parallel.py
examples/test/run_in_child_context/: test_run_in_child_context.py  test_run_in_child_context_step_failure.py
examples/test/step/: test_step.py  test_step_semantics_at_most_once.py
examples/test/wait/: test_wait_permutations.py
examples/test/wait_for_callback/: test_wait_for_callback_child.py  test_wait_for_callback_failure.py  test_wait_for_callback_submitter_failure_catchable.py  test_wait_for_callback_timeout.py
ops/: lintcommit.py
ops/tests/: test_lintcommit.py
src/aws_durable_execution_sdk_python/: execution.py  lambda_service.py
tests/: lambda_service_test.py
tests/operation/: parallel_test.py
