[project]
name = "aws-durable-execution-sdk-python-monorepo"
version = "0.0.0"
requires-python = ">=3.11"

[tool.hatch.envs.default]
workspace.members = ["packages/*"]

[tool.hatch.envs.test]
workspace.members = ["packages/*"]
dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "opentelemetry-sdk>=1.20.0",
  "aws_durable_execution_sdk_python_testing"
]

[tool.hatch.envs.test.scripts]
all = "pytest {args}"
cov = "pytest --cov-report=term-missing --cov {args}"
examples-integration = "pytest --runner-mode=cloud -m example packages/aws-durable-execution-sdk-python-examples/test/ -v {args}"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = [
    "packages/aws-durable-execution-sdk-python/tests",
    "packages/aws-durable-execution-sdk-python-otel/tests",
    "packages/aws-durable-execution-sdk-python-examples/test",
]


[tool.hatch.envs.types]
workspace.members = ["packages/*"]
extra-dependencies = ["mypy>=1.0.0", "pytest", "boto3-stubs[lambda]"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args}"

[tool.hatch.envs.dev-core]
workspace.members = ["packages/aws-durable-execution-sdk-python"]
dependencies = [
  "pytest",
  "pytest-cov",
  "coverage[toml]",
  "aws-durable-execution-sdk-python-testing",
  "mypy>=1.0.0",
  "boto3-stubs[lambda]",
]

[tool.hatch.envs.dev-core.scripts]
test = "pytest packages/aws-durable-execution-sdk-python/tests {args}"
cov = "pytest --cov-report=term-missing --cov-config=packages/aws-durable-execution-sdk-python/pyproject.toml --cov=packages/aws-durable-execution-sdk-python/src/aws_durable_execution_sdk_python --cov-fail-under=98 packages/aws-durable-execution-sdk-python/tests {args}"
typecheck = "mypy --install-types --non-interactive packages/aws-durable-execution-sdk-python/src/aws_durable_execution_sdk_python packages/aws-durable-execution-sdk-python/tests"

[tool.hatch.envs.dev-otel]
workspace.members = [
  "packages/aws-durable-execution-sdk-python",
  "packages/aws-durable-execution-sdk-python-otel",
]
dependencies = [
  "pytest",
  "pytest-cov",
  "coverage[toml]",
  "opentelemetry-sdk>=1.20.0",
  "mypy>=1.0.0",
]

[tool.hatch.envs.dev-otel.scripts]
test = "pytest packages/aws-durable-execution-sdk-python-otel/tests {args}"
cov = "pytest --cov-report=term-missing --cov-config=packages/aws-durable-execution-sdk-python-otel/pyproject.toml --cov=packages/aws-durable-execution-sdk-python-otel/src/aws_durable_execution_sdk_python_otel packages/aws-durable-execution-sdk-python-otel/tests {args}"
typecheck = "mypy --install-types --non-interactive packages/aws-durable-execution-sdk-python-otel/src/aws_durable_execution_sdk_python_otel packages/aws-durable-execution-sdk-python-otel/tests"

[tool.hatch.envs.dev-examples]
workspace.members = [
  "packages/aws-durable-execution-sdk-python",
  "packages/aws-durable-execution-sdk-python-examples",
]
dependencies = [
  "pytest",
  "aws-durable-execution-sdk-python-testing",
]

[tool.hatch.envs.dev-examples.scripts]
test = "pytest packages/aws-durable-execution-sdk-python-examples/test {args}"

[tool.hatch.envs.test-pypi-otel]
dependencies = [
  "aws-durable-execution-sdk-python",
  "opentelemetry-sdk>=1.20.0",
  "pytest",
  "pytest-cov",
  "coverage[toml]",
]
pre-install-commands = [
  "pip install -e packages/aws-durable-execution-sdk-python-otel",
]

[tool.hatch.envs.test-pypi-otel.scripts]
test = "pytest packages/aws-durable-execution-sdk-python-otel/tests {args}"

[tool.hatch.envs.test-pypi-examples]
dependencies = [
  "aws-durable-execution-sdk-python",
  "aws-durable-execution-sdk-python-testing",
  "pytest",
]
pre-install-commands = [
  "pip install -e packages/aws-durable-execution-sdk-python-examples",
]

[tool.hatch.envs.test-pypi-examples.scripts]
test = "pytest packages/aws-durable-execution-sdk-python-examples/test {args}"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".github/scripts/*.sh", ".github/workflows"]

[tool.ruff.lint]
preview = true
select = ["TID252"]  # Enforce absolute imports (ban relative imports)

[tool.ruff.lint.isort]
known-first-party = ["aws_durable_execution_sdk_python", "aws_durable_execution_sdk_python_otel"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
  "ARG001",
  "ARG002",
  "ARG005",
  "S101",
  "PLR2004",
  "PLR6301",
  "SIM117",
  "TRY301",
]
"**/test/**" = [
  "ARG001",
  "ARG002",
  "ARG005",
  "S101",
  "PLR2004",
  "SIM117",
  "TRY301",
]
